--- a/translation-methods/2/pysets.cabal
+++ b/translation-methods/2/pysets.cabal
@@ -27,17 +27,18 @@ common dflt
 library pysetslib
     import:           dflt
     exposed-modules:
-        Pysets.Tokens Pysets.Lex Pysets.Par Pysets.TH Pysets.Expr
+        Pysets.Tokens Pysets.Lex Pysets.Par Pysets.TH Pysets.Expr Pysets.Exc
     build-depends: mtl, containers, extra, template-haskell, transformers
 
 executable parser
     import:           dflt
-    hs-source-dirs:   app
+    hs-source-dirs:   parser
     main-is:          Main.hs
-
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
     build-depends:    pysetslib
+
+Test-Suite test-basic
+		import:           dflt
+		type:             exitcode-stdio-1.0
+		hs-source-dirs:   test
+		main-is:          Main.hs
+		build-depends:    pysetslib, test-framework, test-framework-hunit, HUnit
