--- a/software-design/2/package.json
+++ b/software-design/2/package.json
@@ -19,6 +19,9 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "@types/fetch-mock": "^7.3.5",
+    "fetch-mock": "^9.11.0",
+    "fetch-mock-jest": "^1.5.1",
     "node-fetch": "^2.6.1",
     "ts-node": "^10.9.1"
   }
