--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "software-design/hw-software-design"]
 	path = software-design/hw-software-design
 	url = git@github.com:kp2pml30/hw-software-design.git
+[submodule "languages-and-type-systems/typst-prooftree"]
+	path = languages-and-type-systems/typst-prooftree
+	url = https://github.com/SkiFire13/typst-prooftree.git
