--- a/languages-and-type-systems/stella/package.yaml
+++ b/languages-and-type-systems/stella/package.yaml
@@ -21,6 +21,7 @@ ghc-options:
 - -Wpartial-fields
 - -Wredundant-constraints
 - -Wno-tabs
+- -Werror=incomplete-patterns
 
 internal-libraries:
   stella-parser:
