--- a/languages-and-type-systems/stella/package.yaml
+++ b/languages-and-type-systems/stella/package.yaml
@@ -54,6 +54,7 @@ library:
       - TupleSections
       - GeneralizedNewtypeDeriving
       - RecordWildCards
+      - BangPatterns
 
 executables:
   stella-exe:
